// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BarChart /> handles data input format error 1`] = `
<svg
  class="sc-ifAKCX bmKgXx sc-bdVaJa jgDyUg"
  height="320"
  width="960"
>
  <rect
    class="background"
    height="320"
    width="960"
  />
  <text>
    Input Data Format Error
  </text>
  <g
    class="xaxis-sc-bwzfXH fjjIqd"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0,320)"
  >
    <text
      class="axisName"
      transform="translate(480, 30)"
    />
    <path
      class="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(480.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      />
    </g>
  </g>
  <g
    class="yaxis-sc-htpNat jpKklr"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
  >
    <text
      class="axisName"
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      class="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        40
      </text>
    </g>
  </g>
</svg>
`;

exports[`<BarChart /> renders 1`] = `
<svg
  class="sc-ifAKCX bmKgXx sc-bdVaJa jgDyUg"
  height="320"
  width="960"
>
  <rect
    class="background"
    height="320"
    width="960"
  />
  <g
    class="bargroup-sc-bxivhb fLQBcE"
    transform="translate(-10,0)"
  >
    <rect
      height="200"
      width="20"
      x="137.14285714285717"
      y="120"
    />
    <rect
      height="133.33333333333334"
      width="20"
      x="274.28571428571433"
      y="186.66666666666666"
    />
    <rect
      height="266.6666666666667"
      width="20"
      x="411.42857142857144"
      y="53.333333333333314"
    />
    <rect
      height="133.33333333333334"
      width="20"
      x="548.5714285714287"
      y="186.66666666666666"
    />
    <rect
      height="66.66666666666669"
      width="20"
      x="685.7142857142858"
      y="253.33333333333331"
    />
    <rect
      height="266.6666666666667"
      width="20"
      x="822.8571428571429"
      y="53.333333333333314"
    />
  </g>
  <g
    class="xaxis-sc-bwzfXH fjjIqd"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0,320)"
  >
    <text
      class="axisName"
      transform="translate(480, 30)"
    />
    <path
      class="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(137.64285714285717,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        CN
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(274.78571428571433,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        BE
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(411.92857142857144,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        TX
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(549.0714285714287,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        JD
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(686.2142857142858,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        DF
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(823.3571428571429,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        OD
      </text>
    </g>
  </g>
  <g
    class="yaxis-sc-htpNat jpKklr"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
  >
    <text
      class="axisName"
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      class="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        40
      </text>
    </g>
  </g>
</svg>
`;
